--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 3306,
   "username": "root",
-  "password": "12345",
+  "password": "12345678",
   "database": "test",
   "synchronize": true,
   "logging": false,
