--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 3306,
   "username": "root",
   "password": "12345",
-  "database": "test",
+  "database": "test1",
   "synchronize": true,
   "logging": false,
   "entities": ["dist/entity/**/*.js"],
